--- a/todolist.html
+++ b/todolist.html
@@ -10,13 +10,13 @@
     <div id="container">
         <h1>To-Do List</h1>
         <label for="input" class="label">Add a new task:</label><br>
-        <input type="text" placeholder="Enter a new task" class="input"><br>    
-    </div>
-    <button id="add">Add Task</button>
-    <button id="save">save</button>
-    <div id="output">
+        <input type="text" placeholder="Enter a new task" class="input"><br> 
         
     </div>
+    <p id="msg">  </p> 
+    <button id="add">Add Task</button>
+    <button id="save">save</button>
+
     <script src="todolist.js"></script>
 </body>
 </html>
